--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,7 +1,7 @@
 -   id: autoformat-commit-msg
     name: Git message autoformat
     description: Automatically reformat your Git commit messages
-    entry: auto-smart-commit.py
+    entry: autoformat_commit.py
     language: script
     stages: [prepare-commit-msg]
     always_run: true
